kustomize/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brezgreha
  labels:
    app: brezgreha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: brezgreha
  template:
    metadata:
      labels:
        app: brezgreha
    spec:
      containers:
        - name: brezgreha
          image: brezgreha
          ports:
            - containerPort: 80
