kustomize/front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brezgreha
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - brezgreha.djnd.si
        - brezgreha.danesjenovdan.si
      secretName: brezgreha-tls
  rules:
    - host: brezgreha.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brezgreha
                port:
                  number: 80
    - host: brezgreha.danesjenovdan.si
      http: *http_paths
